    t/005_PgCommon.t. (Closes: #618577)
  * PgCommon.pm: Make {read,set,disable,replace}_conf_value() accept "key
    value" lines without '=', as tihs is optional as per upstream
    specification. Add appropriate test cases to t/005_PgCommon.t. Thanks
    to Frederic Junod for the original patch suggestion. (Closes: #618583)

  [ Peter Eisentraut ]
  * pg_createcluster: Update comment alignment to match existing file better.
    (Closes: #632702)

 -- Martin Pitt <mpitt@debian.org>  Thu, 04 Aug 2011 17:51:56 +0200

postgresql-common (118) unstable; urgency=low

  * Update Catalan debconf translations, thanks Innocent De Marchi.  
    (Closes: #628370)
  * t/050_encodings.t: Update \' escaping test case for 9.1, as this
    finally has been deprecated.
  * debian/control: Add p-server-dev-all dependency to p-common, so that
    packages that build-dep on it get the pg_config wrapper.

 -- Martin Pitt <mpitt@debian.org>  Tue, 14 Jun 2011 14:52:08 +0200

postgresql-common (117) unstable; urgency=low

  * Update Dutch debconf translations, thanks Vincent Zweije.
    (Closes: #627520)
  * Add Catalan debconf translations, thanks Innocent De Marchi.
    (Closes: #628370)
  * debian/control, debian/rules: Let -server-dev-all depend on all supported
    -server-dev-X.Y packages. (Closes: #624749)
  * Add pg_config wrapper: If postgresql-server-dev-* is installed, this calls
    pg_config from the latest available one. Otherwise this falls back to
    libpq-dev's version. This should fix a common confusion for people who
    want to build e. g. 9.0 server-side extensions with a newer (like 9.1
    beta) libpq-dev installed. In debian/postgresql-common.{preinst,postrm}:
    Divert libpq-dev's /usr/bin/pg_config to pg_config.libpq-dev.

 -- Martin Pitt <mpitt@debian.org>  Sun, 29 May 2011 19:22:27 +0200

postgresql-common (116) unstable; urgency=low

  * debian/supported-versions: Move Debian testing/unstable and Ubuntu 11.10
    to 9.0.