@@ -21,6 +21,10 @@ postgresql-common (119) UNRELEASED; urgency=low
     value" lines without '=', as tihs is optional as per upstream
     specification. Add appropriate test cases to t/005_PgCommon.t. Thanks
     to Frederic Junod for the original patch suggestion. (Closes: #618583)
+  * PgCommon.pm, cluster_info(): If postgresql.conf defines an external PID
+    file, check its existence for determining if a cluster is running, instead
+    of poking the port. This is more efficient, and also gives correct results
+    for overlapping port numbers. Based on a patch from Jens Wilke, thanks!
 
   [ Peter Eisentraut ]
   * pg_createcluster: Update comment alignment to match existing file better.
